--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,2 +1,10 @@
-<h1>Posts#index</h1>
-<p>Find me in app/views/posts/index.html.erb</p>
+<h1>投稿一覧</h1>
+
+<% @posts.each do |post| %>
+	<%= image_tag post.image.to_s, size:"200x200" %>
+	<%= post.title %>
+	<% if post.user.id == current_user.id %>
+		<%= link_to "削除", post_path(post), method: :delete %>
+	<% end %>
+<% end %>
+
